--- a/src/features/components/molecules/layout-overlay/layout-overlay.module.scss
+++ b/src/features/components/molecules/layout-overlay/layout-overlay.module.scss
@@ -6,13 +6,5 @@
         pointer-events: none;
         inset: 0;
         z-index: 999;
-        display: flex;
-        flex-direction: column;
-        justify-content: flex-end;
-        align-items: flex-end;
-
-        @include rtl() {
-            align-items: flex-start;
-        }
     }
 }
